# speexdsp

./: CMakeLists.txt  “”
win32/VS2008/: UpgradeLog.htm  libspeexdsp.sln
win32/VS2008/libspeexdsp/: libspeexdsp.vcxproj  libspeexdsp.vcxproj.filters
win32/VS2008/libspeexdsp/Debug/: libspeexdsp.idb
win32/VS2008/libspeexdsp/Debug/libspeexdsp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  libspeexdsp.lastbuildstate
win32/VS2008/tests/: testdenoise.vcxproj  testecho.vcxproj  testresample.vcxproj
win32/VS2008/tests/Debug/: testdenoise.exe.recipe  testdenoise.ilk  testecho.exe.recipe  testecho.ilk  testresample.exe.recipe  vc143.idb
win32/VS2008/tests/Debug/testdenoise.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
win32/VS2008/tests/Debug/testecho.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
win32/VS2008/tests/Debug/testresample.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
